--- a/ui-project/src/components/navigation/NavigationBar.scss
+++ b/ui-project/src/components/navigation/NavigationBar.scss
@@ -2,7 +2,7 @@
     background-color: #2d4b8a;
 }
 a, .navbar-nav, .navbar-light .nav-link {
-    color: #0e0f12!important;
+    color: white!important;
 }
 
 a:hover, .navbar-nav:hover, .navbar-light:hover .nav-link:hover {
