--- a/ui-project/src/components/navigation/NavigationBar.scss
+++ b/ui-project/src/components/navigation/NavigationBar.scss
@@ -27,3 +27,8 @@ a:hover, .navbar-nav:hover, .navbar-light:hover .nav-link:hover {
         font-size: 1.4em !important;
     }
 }
+
+h4{
+    color: white;
+    padding-right: 10px;
+}
